# fudosan-library

./: .gitignore  README.md  pyproject.toml
fudosan_library/: area_data.py  base.py  estate_price.py  kokudo_data.py  tile_utils.py
tests/: test_base.py  test_tile_funcs.py
