[tool.poetry]
name = "fudosan-library"
version = "0.1.0"
description = "This is a Python library for accessing the API of the Real Estate Information Library provided by the MLIT Japan."
authors = ["hideyuki-ogawa <hogawa098@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.32.3"
pandas = "^2.2.3"
numpy = "^2.1.2"
geopandas = "^1.0.1"
shapely = "^2.0.6"
mapclassify = "^2.8.1"
plotly = "^5.24.1"
setuptools = "^75.2.0"
jageocoder = "^2.1.8"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
